Add some manual linguist specifiers

--- a/home/private_dot_config/private_chezmoi/private_chezmoi.toml.tmpl
+++ b/home/private_dot_config/private_chezmoi/private_chezmoi.toml.tmpl
@@ -1,3 +1,4 @@
+# -*- toml -*-
 umask = 0o077
 encryption = "gpg"
 {{ $miscDir := trim (output "/bin/realpath" (print .chezmoi.sourceDir "/../misc")) -}}
