--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -1,3 +1,4 @@
+# -*- gitconfig -*-
 [gcrypt]
 	participants = {{ .gpg.cathyPrimaryKeyFingerprint }} {{ .gpg.cathyEncryptionKeyFingerprint }}
 [gpg]
