--- a/home/private_dot_config/private_usr/private_local/private_etc/private_smb.conf.tmpl
+++ b/home/private_dot_config/private_usr/private_local/private_etc/private_smb.conf.tmpl
@@ -1,3 +1,4 @@
+# -*- ini -*-
 # This is the main Samba configuration file. You should read the
 # smb.conf(5) manual page in order to understand the options listed
 # here. Samba has a huge number of configurable options (perhaps too
