--- a/home/private_dot_gnupg/private_executable_keychain-agent.sh.tmpl
+++ b/home/private_dot_gnupg/private_executable_keychain-agent.sh.tmpl
@@ -1,4 +1,5 @@
 #!{{ template "brew-root" . }}/bin/fish --no-config
+# -*- fish -*-
 
 set -l gpg_agent_bin '{{ template "brew-root" . }}/bin/keychain-interpose-agent'
 set -l keychain_bundle (path normalize (path dirname (path resolve $gpg_agent_bin))/../..)
