--- a/home/private_dot_config/private_fish/private_config.fish.tmpl
+++ b/home/private_dot_config/private_fish/private_config.fish.tmpl
@@ -70,6 +70,9 @@ export DOCKER_DEFAULT_PLATFORM=linux/amd64
 fish_add_path (brew --prefix ruby)/bin
 fish_add_path /Library/TeX/texbin
 
+# Enable man(1) to find Puppet's man pages.
+add_manpath /opt/puppetlabs/puppet/share/man
+
 export DEVKITPRO=/opt/devkitpro
 export DEVKITPPC=/opt/devkitpro/devkitppc
 export HOMEBREW_NO_ENV_HINTS=1
