--- a/puppet/environments/production/modules/sshuttle/templates/sudoers.erb
+++ b/puppet/environments/production/modules/sshuttle/templates/sudoers.erb
@@ -3,5 +3,5 @@
 <%= @sudoers_prefix_sshuttle %> -v -v --method auto --firewall
 
 User_Alias CATHY_UID = #<%= @facts['cathy_uid'] %>
-CATHY_UID ALL = (<%= @safe_username %>) CWD=~<%= @safe_username %> NOPASSWD: /var/sshuttle/connect.sh \
+CATHY_UID ALL = (<%= @sudoers_username %>) CWD=~<%= @sudoers_username %> NOPASSWD: /var/sshuttle/connect.sh \
     ^(-s [0-9]{0,5}\.?[0-9]{0,5} ?)?(-v ?){0,2}(-x)?$
