--- a/home/private_dot_config/private_chezmoi/private_chezmoi.toml.tmpl
+++ b/home/private_dot_config/private_chezmoi/private_chezmoi.toml.tmpl
@@ -2,17 +2,23 @@
 umask = 0o077
 encryption = "gpg"
 {{ $miscDir := trim (output "/bin/realpath" (print .chezmoi.sourceDir "/../misc")) -}}
-textconv = [
-    { pattern = "**/*.plist", command = "plutil", args = ["-convert", "xml1", "-o", "-", "-"] },
-    { pattern = "**/rclone.conf", command = "{{ $miscDir }}/tools/rclone-cat.sh" }
-]
+[[textconv]]
+    pattern = "**/*.plist"
+    command = "plutil"
+    args = ["-convert", "xml1", "-o", "-", "-"]
+[[textconv]]
+    pattern = "**/rclone.conf"
+    command = "{{ $miscDir }}/tools/rclone-cat.sh"
 [gpg]
     args = ["--quiet", "--default-recipient-self"]
 [diff]
     exclude = ["scripts"]
 [status]
     exclude = ["scripts"]
-[data]
-    chezmoi.miscDir = "{{ $miscDir }}"
-    chezmoi.privateDir = "{{ trim (output "/bin/realpath" (print .chezmoi.sourceDir "/../private")) }}"
-    chezmoi.puppetDir = "{{ trim (output "/bin/realpath" (print .chezmoi.sourceDir "/../puppet")) }}"
+[data.chezmoi]
+    miscDir = "{{ $miscDir }}"
+    privateDir = "{{ trim (output "/bin/realpath" (print .chezmoi.sourceDir "/../private")) }}"
+    puppetDir = "{{ trim (output "/bin/realpath" (print .chezmoi.sourceDir "/../puppet")) }}"
+[data.synergy]
+    screenName = "{{- eq .chezmoi.hostname `MacBook-Pro` | ternary `cathy-macbookpro` `cathy-macbookair` -}}"
+    serverPort = 24800
