--- a/puppet/environments/production/modules/sshuttle/templates/sudoers.erb
+++ b/puppet/environments/production/modules/sshuttle/templates/sudoers.erb
@@ -2,6 +2,9 @@
 <%= @sudoers_prefix_sshuttle %> -v --method auto --firewall
 <%= @sudoers_prefix_sshuttle %> -v -v --method auto --firewall
 
+<%= @sudoers_username %> ALL = (root) NOPASSWD: /usr/bin/nice \
+    ^-n -20 -- /usr/bin/sudo -nu <%= @sudoers_username %> -- /private/var/sshuttle/sshuttle/run .*$
+
 User_Alias CATHY_UID = #<%= @facts['cathy_uid'] %>
 CATHY_UID ALL = (<%= @sudoers_username %>) CWD=~<%= @sudoers_username %> NOPASSWD: /var/sshuttle/connect.sh \
     ^(-s [0-9]{0,5}\.?[0-9]{0,5} ?)?(-v ?){0,2}(-x)?$
