vscode: Enable Workspace Trust feature

--- a/home/private_dot_config/private_fish/private_executable_literal_run_code_editor_and_wait.fish.tmpl
+++ b/home/private_dot_config/private_fish/private_executable_literal_run_code_editor_and_wait.fish.tmpl
@@ -8,7 +8,7 @@
 # If nano isn't installed either, run pico.
 set -l CODE_EDITOR_PATH "{{ template "brew-root" . }}/bin/code"
 if test -e "$CODE_EDITOR_PATH"; and test -z "$SSH_CLIENT"
-    exec "$CODE_EDITOR_PATH" --wait $argv
+    exec "$CODE_EDITOR_PATH" --wait --new-window $argv
 else
     set -l CODE_EDITOR_PATH "{{ template "brew-root" . }}/bin/nano"
     if test -e $CODE_EDITOR_PATH
