--- a/home/private_dot_config/private_var/private_root/private_executable_run-startup-commands.tmpl
+++ b/home/private_dot_config/private_var/private_root/private_executable_run-startup-commands.tmpl
@@ -35,6 +35,11 @@ start_pf() {
 block return in proto tcp from any to any port 7575 # normal TCP connection
 block return out proto tcp from any to any port 7573 # reverse TCP connection
 
+# Synergy (Deskflow)
+# All connections should go over ssh, so block all direct network connectivity.
+block return in proto tcp from any to any port {{ .synergy.serverPort }}
+pass in inet proto tcp from 127.0.0.1 to 127.0.0.1 port {{ .synergy.serverPort }}
+
 # Samba
 block return in proto tcp from any to any port 445
 pass in inet proto tcp from 127.0.0.1 to 127.0.0.1 port 445
