Fix sshd configuration

--- a/home/private_dot_config/private_etc/private_ssh/private_sshd_config.d/private_200-cathyjf.conf.tmpl
+++ b/home/private_dot_config/private_etc/private_ssh/private_sshd_config.d/private_200-cathyjf.conf.tmpl
@@ -4,7 +4,7 @@ KbdInteractiveAuthentication no
 AuthenticationMethods publickey
 PermitRootLogin no
 
-AllowUsers cathy@192.168.1.*
+AllowUsers Cathy@192.168.1.* cathy@192.168.1.*
 
 # See https://wiki.gnupg.org/AgentForwarding
 StreamLocalBindUnlink yes
