--- a/puppet/environments/production/modules/sshuttle/templates/sudoers.erb
+++ b/puppet/environments/production/modules/sshuttle/templates/sudoers.erb
@@ -7,3 +7,5 @@
 User_Alias CATHY_UID = #<%= @facts['cathy_uid'] %>
 CATHY_UID ALL = (<%= @sudoers_username %>) CWD=~<%= @sudoers_username %> NOPASSWD: /var/sshuttle/connect.sh \
     ^(-s [0-9]{0,5}\.?[0-9]{0,5} ?)?(-v ?){0,2}(-x)?$
+
+root ALL = (:<%= @sudoers_groupname %>) /usr/bin/tar
