`chezmoi.toml`: Fix typo

--- a/home/private_dot_config/private_chezmoi/private_chezmoi.toml.tmpl
+++ b/home/private_dot_config/private_chezmoi/private_chezmoi.toml.tmpl
@@ -22,7 +22,7 @@ encryption = "gpg"
 [data.synergy]
     screenName = "{{
         eq .chezmoi.hostname `MacBook-Pro` |
-            ternary `cathy-macbookpro"` (
+            ternary `cathy-macbookpro` (
                 eq .chezmoi.hostname `Mac-mini` |
                     ternary `cathy-macmini` `cathy-macbookair`
             )
