`.gitconfig`: Fix duplicate gcrypt keys

--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -1,6 +1,6 @@
 # -*- gitconfig -*-
 [gcrypt]
-	participants = {{ .gpg.cathyPrimaryKeyFingerprint }} {{ .gpg.cathyEncryptionKeyFingerprint }}
+	participants = {{ .gpg.cathyPrimaryKeyFingerprint }}
 [gpg]
 	program = {{ .chezmoi.homeDir }}/.config/git/gpg-git-gcrypt.sh
 [user]
