--- a/home/private_dot_ssh/private_executable_on-boot.tmpl
+++ b/home/private_dot_ssh/private_executable_on-boot.tmpl
@@ -1,11 +1,12 @@
 #!/bin/sh
 export PATH=
 (
-    # The `run-startup-commands` script installs our custom pf rules, so that
-    # script must finish running first before we can start sshuttle or else
-    # we'll run into race conditions when sshuttle alters the pf configuration.
-    /usr/bin/sudo -n /var/root/run-startup-commands
-    /usr/bin/sudo -n -u _sshuttle /var/sshuttle/connect.sh -v -x
+    if /usr/bin/sudo -n /var/root/run-startup-commands; then
+        # The `run-startup-commands` script installs our custom pf rules, so that
+        # script must finish running first before we can start sshuttle or else
+        # we'll run into race conditions when sshuttle alters the pf configuration.
+        /usr/bin/sudo -n -u _sshuttle /var/sshuttle/connect.sh -v -x
+    fi
 ) &
 {{ if eq .chezmoi.hostname "MacBook-Pro" -}}
 ~/.ssh/restart-ssh-macbookair.sh -x &
